...
                        ),
                        const SizedBox(
                          height: 30,
                        ),
                        CustomInputFields.buildInputFormFieldWIthPrefixIcon(
                          label: 'Amount',
                          keyValue: const Key('txtAdditional'),
                          textController: _amountController,
                          obscureText: false,
                          prefixIcon: 'Rs. ',
                          validator: (value) {
                            if (value == null || value.isEmpty) {
                              return 'Please enter amount';
...
                    ),
                  ),
                  SizedBox(
                    width: double.infinity,
                    height: 60,
                    child: ElevatedButton(
                      key: const Key('btnUpdate'),
                      onPressed: () {
                        if (_key.currentState!.validate()) _addAdditional();
                      },
                      child: const Text(
                        'Save',
                      ),
...
