...
              key: _key,
              child: Column(
                children: [
                  CustomInputFields.buildInputFormField(
                    label: 'Full Name',
                    textController: _nameController,
                    keyValue: const Key('txtName'),
                    obscureText: false,
                    validator: (value) {
                      if (value == null || value.isEmpty) {
                        return 'Please enter your name';
                      }
                      return null;
...
                  ),
                  const SizedBox(height: 40),
                  SizedBox(
                    width: double.infinity,
                    height: 60,
                    child: ElevatedButton(
                        key: const Key('btnUpdate'),
                        onPressed: () {
                          if (_key.currentState!.validate()) {
                            _updateName(ref);
                          }
                        },
                        child: _isLoading
...
